cabal-version:      3.0
name:               advent
version:            0.1.0.0
synopsis:           Advent of Code solutions
license:            BSD-3-Clause
license-file:       LICENSE
author:             Fraser Tweedale
maintainer:         frase@frase.id.au
copyright:          Copyright 2023 Fraser Tweedale
category:           Game
build-type:         Simple

common common
  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    LambdaCase
    TupleSections
  ghc-options:
    -Wall
    -Wcompat
    -Werror=missing-methods
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wnoncanonical-monad-instances
    -Wpartial-fields
    -Wredundant-constraints
    -fhide-source-paths
    -Wunused-packages
    -Winvalid-haddock
    -Werror=unicode-bidirectional-format-characters
    -Wimplicit-lift
    -Woperator-whitespace
    -Wredundant-bang-patterns
  if impl(ghc >= 9.4)
    ghc-options:
      -Wredundant-strictness-flags

executable advent
    import:           common
    hs-source-dirs:   src
    main-is:          Main.hs
    other-modules:
      Util.Map
      Util.Parser
      Y2023.D19
      Y2023.D18
      Y2023.D17
      Y2023.D16
      Y2023.D15
      Y2023.D14
      Y2023.D13
      Y2023.D12
      Y2023.D11
      Y2023.D10
      Y2023.D09
      Y2023.D08
      Y2023.D07
      Y2023.D06
      Y2023.D05
      Y2023.D04
      Y2023.D03
      Y2023.D02
      Y2023.D01
      Y2023
    build-depends:
      base >= 4.16
